--- a/view/assets/styles/font-icon.css
+++ b/view/assets/styles/font-icon.css
@@ -1,4 +1,4 @@
-.card-button>i::before {
+.card-button > i::before {
     content: "\f107";
 }
 
@@ -13,40 +13,68 @@ i.start-game {
 
 i.start-game::before {
     content: "\f135";
-    font-family: 'fa';
+    font-family: "fa";
     font-style: normal;
     font-size: 1.3rem;
 }
 
 i.pro-settings::before {
     content: "\f1de";
-    font-family: 'fa';
+    font-family: "fa";
     font-style: normal;
     font-size: 1.3rem;
 }
 
 i.debug-settings::before {
     content: "\f0ad";
-    font-family: 'fa';
+    font-family: "fa";
     font-style: normal;
     font-size: 1.3rem;
 }
 
 i.java-logo::before {
     content: "\f4e4";
-    font-family: 'fa';
+    font-family: "fa";
     font-style: normal;
     font-size: 1.9rem;
 }
+i.spinner-third,i.circle-check {
+    font-family: "Font Awesome 6 Duotone";
+    font-style: normal;
+    font-weight: 600;
+    margin-right: 9.1px;
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+}
+i.circle-check {
+    font-family: 'fa-pro';
+    font-weight: 200;
+    margin-right: 10px;
+}
+i.spinner-third::before {
+    content: "\f3f4";
+    position: absolute;
+}
 
-div.title-bar>div.button #min::before {
+i.spinner-third::after {
+    content: "\f3f4\f3f4";
+    color: silver;
+}
+
+i.circle-check::before {
+    content: '\f058';
+    color: #008501;
+}
+
+div.title-bar > div.button #min::before {
     content: "\f068";
     font-size: 1.4rem;
     line-height: 2.7;
     transform: scale(0.85, 1);
 }
 
-div.title-bar>div.button #close::before {
+div.title-bar > div.button #close::before {
     content: "\f00d";
     font-size: 1.4rem;
     line-height: 2.2;
@@ -84,7 +112,19 @@ button#start::before {
     content: "\f135";
 }
 
-.choose-file>i::before {
+.choose-file > i::before {
     content: "\f07c";
     font-style: normal;
+}
+
+i.folder-arrow-down {
+    font-family: 'fa-pro';
+}
+
+i.folder-arrow-down::before {
+    content: '\f019';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    margin-right: 20px;
 }
