--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -27,104 +27,6 @@
     background-color: #fafbfc00;
 }
 
-/* 从谷歌那偷来的加载动画 */
-.mspin-medium {
-    width: 36px;
-    height: 36px;
-    overflow: hidden;
-    -webkit-animation: mspin-rotate 1568.63ms infinite linear;
-    -moz-animation: mspin-rotate 1568.63ms infinite linear;
-    animation: mspin-rotate 1568.63ms infinite linear;
-    transition: opacity 0.3s ease;
-    margin: 0;
-}
-.mspin-medium > div {
-    -webkit-animation: mspin-revrot 5332ms infinite steps(4);
-    -moz-animation: mspin-revrot 5332ms infinite steps(4);
-    animation: mspin-revrot 5332ms infinite steps(4);
-}
-.mspin-medium > div > div {
-    background-image: url("../images/loading.svg");
-    background-size: 100%;
-    width: 11664px;
-    height: 36px;
-    -webkit-animation: mspin-medium-film 5332ms infinite steps(324);
-    -moz-animation: mspin-medium-film 5332ms infinite steps(324);
-    animation: mspin-medium-film 5332ms infinite steps(324);
-}
-@-webkit-keyframes mspin-medium-film {
-    from {
-        -webkit-transform: translateX(0);
-    }
-    to {
-        -webkit-transform: translateX(-11664px);
-    }
-}
-@-webkit-keyframes mspin-rotate {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(360deg);
-    }
-}
-@-webkit-keyframes mspin-revrot {
-    from {
-        -webkit-transform: rotate(0deg);
-    }
-    to {
-        -webkit-transform: rotate(-360deg);
-    }
-}
-@-moz-keyframes mspin-medium-film {
-    from {
-        -moz-transform: translateX(0);
-    }
-    to {
-        -moz-transform: translateX(-11664px);
-    }
-}
-@-moz-keyframes mspin-rotate {
-    from {
-        -moz-transform: rotate(0deg);
-    }
-    to {
-        -moz-transform: rotate(360deg);
-    }
-}
-@-moz-keyframes mspin-revrot {
-    from {
-        -moz-transform: rotate(0deg);
-    }
-    to {
-        -moz-transform: rotate(-360deg);
-    }
-}
-@keyframes mspin-medium-film {
-    from {
-        transform: translateX(0);
-    }
-    to {
-        transform: translateX(-11664px);
-    }
-}
-@keyframes mspin-rotate {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-@keyframes mspin-revrot {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(-360deg);
-    }
-}
-
 #win {
     /* width: calc(100vw - 10px); */
     /* height: calc(99.8vh - 0px); */
@@ -158,8 +60,9 @@ div.title-bar {
 
 div.title {
     display: flex;
-    margin-left: 2rem;
+    margin-left: 1rem;
     align-items: center;
+    padding: 0 20px;
 }
 
 div.title-bar div#title {
@@ -185,8 +88,9 @@ div.title-bar > div.button .window-btn {
     -webkit-app-region: no-drag;
     border-radius: 50%;
     cursor: pointer;
-    transition: all .15s ease;
+    transition: all 0.15s ease;
 }
+
 div.title-bar > div.button .window-btn:active {
     transform: scale(0.9);
 }
@@ -763,21 +667,14 @@ div.page > iframe > * {
 ul.list {
     width: 100%;
     padding: 0px 20px 15px 20px;
-    /* background-color: #fbfbfbd1; */
-    /* box-shadow: 0px 0px 4px rgb(0 0 0 / 39%); */
-    /* border-radius: 7px; */
-    /* margin-top: -1px; */
     max-height: calc(100vh - 200px);
     overflow: overlay;
-    /* z-index: 10; */
-    /* min-height: calc(6rem + 36px); */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    transition: all .3s ease;
+    transition: all 0.3s ease;
     opacity: 0;
-    /* position: absolute; */
 }
 
 ul.list > li {
@@ -898,8 +795,68 @@ ul.list hr {
 }
 
 div#B9C498C7 {
-   display: flex;
-   align-items: center;
-   color: #0000009c;
-   font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    color: #0000009c;
+    font-size: 0.9rem;
 }
+ul.task-list {
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+}
+
+ul.task-list > li {
+    list-style: none;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    /* background-color: rgba(0, 0, 0, 0.058); */
+    margin-bottom: 4px;
+    color: #131415;
+    padding: 0 12px;
+    /* display: inline-block; */
+}
+
+ul.task-list > li:hover {
+    background-color: #0000000c;
+}
+
+i.task-list-icon {
+}
+
+#game_install h4 {
+    display: inline;
+}
+
+#game_install div.title {
+    margin: 0;
+}
+#game_install div.title p {
+    color: #0000007a;
+    font-size: 13px;
+}
+
+#game_install div.head {
+    padding: 1.5rem 1rem 1rem 1rem;
+}
+
+#game_install div.title span {
+    font-size: 16px;
+}
+
+#game_install li span.count {
+    /* display: flex; */
+    /* width: 300px; */
+    font-size: 14px;
+    color: #000000a3;
+}
+/*  未启用特性：标题栏图标
+.title-bar div#icon {
+width: 28px;
+    height: 43px;
+    background: no-repeat center/100%;
+    background-image: url(../../logo.ico);
+} */
