--- a/view/index.html
+++ b/view/index.html
@@ -92,7 +92,7 @@
           </span>
         </li>
         <li class="sidebar-item" id="sidebar-5">
-          <span id="v_setting" class="sidebar">
+          <span id="l_setting" class="sidebar">
             <i class="fa-regular nav-icon" id="nav-6"></i>
             <p>启动器</p>
           </span>
@@ -149,30 +149,12 @@
         </div>
         <div class="card-body">
           <div>
-            <div class="input input-text">
-              <span class="name">{{ui.global_settings.game_window_title}}</span>
-              <div class="input-data">
-                <input type="text" id="input_a" title="{{ui.global_settings.game_window_title}}"
-                  :placeholder="ui.global_settings.game_window_title_placeholder" required />
-                <div class="underline"></div>
-              </div>
-            </div>
-            <div class="input input-text">
-              <span class="name">{{ui.global_settings.customize_launcher_info}}</span>
-              <div class="input-data">
-                <input type="text" id="input_a" title="{{ui.global_settings.customize_launcher_info}}"
-                  :placeholder="ui.global_settings.customize_launcher_info_placeholder" required />
-                <div class="underline"></div>
-              </div>
-            </div>
-            <div class="input input-text">
-              <span class="name">{{ui.global_settings.server_address}}</span>
-              <div class="input-data">
-                <input type="text" id="input_a" title="{{ui.global_settings.server_address}}"
-                  :placeholder="ui.global_settings.server_address_placeholder" required />
-                <div class="underline"></div>
-              </div>
-            </div>
+            <input-text :name="ui.global_settings.game_window_title"
+              :placeholder="ui.global_settings.game_window_title_placeholder"></input-text>
+            <input-text :name="ui.global_settings.customize_launcher_info"
+              :placeholder="ui.global_settings.customize_launcher_info_placeholder"></input-text>
+            <input-text :name="ui.global_settings.server_address"
+              :placeholder="ui.global_settings.server_address_placeholder"></input-text>
             <div class="input input-list" id="version_isolation">
               <span class="name">{{ui.global_settings.process_priority}}</span>
               <div class="input-data input-data-list" onclick="input_list(this,'156px')">
@@ -235,18 +217,18 @@
           :description="ui.global_settings.advanced_settings_description" icon="pro-settings"></card-header>
         <div class="card-body" style="overflow: hidden; height: 0">
           <div>
-            <inputbox :name="ui.global_settings.game_parameters"
-              :placeholder="ui.global_settings.game_parameters_placeholder"></inputbox>
-            <inputbox :name="ui.global_settings.exec_before_starting"
-              :placeholder="ui.global_settings.exec_before_starting_placeholder"></inputbox>
-            <inputbox :name="ui.global_settings.wrap_command"
-              :placeholder="ui.global_settings.wrap_command_placeholder"></inputbox>
-            <inputbox :name="ui.global_settings.exec_after_starting"
-              :placeholder="ui.global_settings.exec_after_starting_placeholder"></inputbox>
-            <inputbox :name="ui.global_settings.jvm_parameters"
-              :placeholder="ui.global_settings.jvm_parameters_placeholder"></inputbox>
-            <inputbox :name="ui.global_settings.memory_persistence_area"
-              :placeholder="ui.global_settings.memory_persistence_area_placeholder"></inputbox>
+            <input-text :name="ui.global_settings.game_parameters"
+              :placeholder="ui.global_settings.game_parameters_placeholder"></input-text>
+            <input-text :name="ui.global_settings.exec_before_starting"
+              :placeholder="ui.global_settings.exec_before_starting_placeholder"></input-text>
+            <input-text :name="ui.global_settings.wrap_command"
+              :placeholder="ui.global_settings.wrap_command_placeholder"></input-text>
+            <input-text :name="ui.global_settings.exec_after_starting"
+              :placeholder="ui.global_settings.exec_after_starting_placeholder"></input-text>
+            <input-text :name="ui.global_settings.jvm_parameters"
+              :placeholder="ui.global_settings.jvm_parameters_placeholder"></input-text>
+            <input-text :name="ui.global_settings.memory_persistence_area"
+              :placeholder="ui.global_settings.memory_persistence_area_placeholder"></input-text>
           </div>
         </div>
       </div>
@@ -264,24 +246,70 @@
         </div>
         <div class="card-body" style="overflow: hidden; height: 0">
           <div>
-            <inputbox :name="ui.global_settings.lwjgl" :placeholder="ui.global_settings.lwjgl_placeholder"></inputbox>
+            <input-text :name="ui.global_settings.lwjgl" :placeholder="ui.global_settings.lwjgl_placeholder">
+            </input-text>
             <checkbox :name="ui.global_settings.dont_check_jvm_parameters"></checkbox>
             <checkbox :name="ui.global_settings.dont_check_assets_files"></checkbox>
             <checkbox :name="ui.global_settings.dont_check_JVM_compatibility"></checkbox>
             <checkbox :name="ui.global_settings.use_system_GLFW"></checkbox>
             <checkbox :name="ui.global_settings.use_system_OpenAL"></checkbox>
-            <div class="input">
-              <span class="name">{{ui.global_settings.dev_tools}}</span>
-              <button class="command-button"
-                onclick="execute('OpenDevTools')">{{ui.global_settings.dev_tools_btn}}</button>
-            </div>
+            <command-button :name="ui.global_settings.dev_tools" :text="ui.global_settings.dev_tools_btn"
+              click="execute('OpenDevTools')">
+            </command-button>
           </div>
         </div>
       </div>
     </div>
     <div id="l_setting_pg">
-      <inputbox></inputbox>
-      <checkbox name="自动分配内存"></checkbox>
+      <div class="page-title">启动器设置</div>
+      <div class="card">
+        <card-header title="更新" description="配置启动器更新选项" icon="arrows-rotate"></card-header>
+        <div class="card-body">
+          <div>
+            <checkbox name="使用预览版启动器"></checkbox>
+            <checkbox name="自动更新"></checkbox>
+            <checkbox name="检查更新时同时检查插件是否有更新"></checkbox>
+            <command-button name="立即检查更新" text="检查更新"></command-button>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <card-header title="个性化" description="设置启动器外观" icon="paintbrush"></card-header>
+        <div class="card-body">
+          <div>
+            <div class="input input-list" id="version_isolation">
+              <span class="name">主题</span>
+              <div class="input-data input-data-list" onclick="input_list(this,'156px')">
+                <div></div>
+                <ul class="option" style="display: none">
+                  <li class="option" onclick="set_input_list(this)">平滑</li>
+                  <li class="option" onclick="set_input_list(this)">方形</li>
+                  <li class="option" onclick="set_input_list(this)">复古</li>
+                  <li class="option" onclick="set_input_list(this)">官方启动器</li>
+                  <li class="option" onclick="set_input_list(this)">Windows 11</li>
+                  <div></div>
+                </ul>
+              </div>
+            </div>
+            <input-color name="主题色"></input-color>
+            <div class="input input-list" id="version_isolation">
+              <span class="name">背景</span>
+              <div class="input-data input-data-list" onclick="input_list(this,'156px')">
+                <div></div>
+                <ul class="option" style="display: none">
+                  <li class="option" onclick="set_input_list(this)">主题色</li>
+                  <li class="option" onclick="set_input_list(this)">渐变</li>
+                  <li class="option" onclick="set_input_list(this)">图片</li>
+                  <li class="option" onclick="set_input_list(this)">必应每日一图</li>
+                  <li class="option" onclick="set_input_list(this)">自定义</li>
+                  <div></div>
+                </ul>
+              </div>
+            </div>
+            <input-text name="字体"></input-text>
+          </div>
+        </div>
+      </div>
     </div>
     <div id="download_pg">
       <div class="page-title">安装游戏</div>
@@ -301,22 +329,12 @@
             </div>
             <div style="opacity: 1;" id="B9C498C7">
               <span>正在加载版本列表</span>
-              <!-- ↓加载动画↓ -->
-              <div style="width: 32px;height: 32px;display: inline-block;transform: scale(0.6);">
-                <div class="Sf-Kd mspin-medium" id="loading">
-                  <div>
-                    <div></div>
-                  </div>
-                </div>
-              </div>
-              <!-- ↑加载动画↑ -->
+              <loading styles="width: 32px;height: 32px;display: inline-block;transform: scale(0.6);"></loading>
             </div>
           </div>
         </div>
         <ul class="list disposable" id="_version_list" style="max-height: 0; padding: 0px 20px;">
-
         </ul>
-
       </div>
 
 
@@ -330,15 +348,7 @@
       </div>
       <div class="body" id="ms_login_body" style="width: 440.8px; height: 328.8px">
         <div></div>
-        <!-- ↓加载动画↓ -->
-        <div style="margin: auto auto; width: 36px; height: 36px;position: absolute;z-index: -1;">
-          <div class="Sf-Kd mspin-medium" id="loading">
-            <div>
-              <div></div>
-            </div>
-          </div>
-        </div>
-        <!-- ↑加载动画↑ -->
+        <loading styles="margin: auto auto; width: 36px; height: 36px;position: absolute;z-index: -1;"></loading>
       </div>
       <div class="foot" style="display: none"></div>
     </div>
