--- a/view/assets/styles/index.css
+++ b/view/assets/styles/index.css
@@ -35,6 +35,17 @@
     box-shadow: 0px 0px 5px #00000047;
     transition: background-color 0.3s ease;
     background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%);
+    background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+    background-image: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    background-image: linear-gradient(to top, #e6e9f0 0%, #eef1f5 100%);
+    background-image: linear-gradient(to top, #accbee 0%, #e7f0fd 100%);
+    background-image: linear-gradient(to top, #0ba360 0%, #3cba92 100%);
+    /* background-image: linear-gradient(to top, #f43b47 0%, #453a94 100%); */
+    /* background-image: linear-gradient(to right, #434343 0%, black 100%); */
+    /* background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%); */
+    /* background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); */
 }
 
 div.title-bar {
