--- a/view/index.html
+++ b/view/index.html
@@ -67,7 +67,7 @@
 
       <ul class="sidebar-links">
         <li class="sidebar-header">游戏</li>
-        <sidebar-item title="启动游戏" icon="nav-7" click="display_btn();$('#main').empty();"></sidebar-item>
+        <sidebar-item title="启动游戏" icon="nav-7" click="display_btn();$(document.querySelectorAll('#main>div');).attr('style', 'display:none');"></sidebar-item>
         <sidebar-item title="版本列表" icon="nav-2"></sidebar-item>
         <sidebar-item title="下载" icon="nav-4" click="change_page('#download_pg');version_list('vanilla');">
         </sidebar-item>
