--- a/view/assets/styles/animation.css
+++ b/view/assets/styles/animation.css
@@ -1,6 +1,6 @@
 #main {
     transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 body {
